force-app/main/default/objects/Billing_Information_Line_Item__c/Billing_Information_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Billing Information Line Item</label>
    <nameField>
        <label>Billing Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Information Line Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>