force-app/main/default/objects/Billing_Information_Line_Item__c/fields/Acknowledge_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Acknowledge_Date_Time__c</fullName>
    <label>Acknowledge Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>