force-app/main/default/objects/Billing_Information_Line_Item__c/fields/Billing_Information__c.field-meta.xml
<CustomField>
    <fullName>Billing_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Information</label>
    <referenceTo>Billing_Information__c</referenceTo>
    <relationshipLabel>Billing Information Line Item</relationshipLabel>
    <relationshipName>Billing_Information_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>