force-app/main/default/objects/Billing_Information_Line_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Project_Services__c</referenceTo>
    <relationshipName>Billing_Information</relationshipName>
    <type>Lookup</type>
</CustomField>