force-app/main/default/objects/Billing_Information_Line_Item__c/fields/Client_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_PO_Number__c</fullName>
    <label>Client PO Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>