force-app/main/default/objects/Billing_Information_Line_Item__c/fields/Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time__c</fullName>
    <label>Created Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>