force-app/main/default/objects/Billing_Information_Line_Item__c/fields/Date_of_Assingment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Assingment__c</fullName>
    <label>Date of Assingment</label>
    <type>Date</type>
</CustomField>