force-app/main/default/objects/Billing_Information_Line_Item__c/fields/Date_of_OT__c.field-meta.xml
<CustomField>
    <fullName>Date_of_OT__c</fullName>
    <label>Date of OT</label>
    <type>Date</type>
</CustomField>