force-app/main/default/objects/Billing_Information_Line_Item__c/fields/Engineer_Visit_Time__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Visit_Time__c</fullName>
    <label>Engineer Visit Time</label>
    <type>Time</type>
</CustomField>