force-app/main/default/objects/Billing_Information_Line_Item__c/fields/Excess_Hours_OH__c.field-meta.xml
<CustomField>
    <fullName>Excess_Hours_OH__c</fullName>
    <label>Excess Hours(OH)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>