force-app/main/default/objects/Billing_Information_Line_Item__c/fields/FTE_Monthly_Rate__c.field-meta.xml
<CustomField>
    <fullName>FTE_Monthly_Rate__c</fullName>
    <label>FTE  Monthly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>