force-app/main/default/objects/Billing_Information_Line_Item__c/fields/Full_Day__c.field-meta.xml
<CustomField>
    <fullName>Full_Day__c</fullName>
    <label>Full Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>