force-app/main/default/objects/Billing_Information_Line_Item__c/fields/INC_Number__c.field-meta.xml
<CustomField>
    <fullName>INC_Number__c</fullName>
    <label>INC Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>