force-app/main/default/objects/Billing_Information_Line_Item__c/fields/Incident_Severity_Level__c.field-meta.xml
<CustomField>
    <fullName>Incident_Severity_Level__c</fullName>
    <label>Incident/Severity Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>