force-app/main/default/objects/Billing_Information_Line_Item__c/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice No.</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipName>Billing_Information</relationshipName>
    <type>Lookup</type>
</CustomField>