force-app/main/default/objects/Billing_Information_Line_Item__c/fields/Number_of_Billiable_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Billiable_Days__c</fullName>
    <label>Number of Billiable Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>