force-app/main/default/objects/Billing_Information_Line_Item__c/fields/Number_of_OT_Time__c.field-meta.xml
<CustomField>
    <fullName>Number_of_OT_Time__c</fullName>
    <label>Number of OT Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>