force-app/main/default/objects/Billing_Information_Line_Item__c/fields/Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Request_ID__c</fullName>
    <label>Request ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>