force-app/main/default/objects/Billing_Information_Line_Item__c/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <label>Resource Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>