force-app/main/default/objects/Billing_Information_Line_Item__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Project_Sites__c</referenceTo>
    <relationshipName>Billing_Information</relationshipName>
    <type>Lookup</type>
</CustomField>