force-app/main/default/objects/Billing_Information_Line_Item__c/fields/TOT__c.field-meta.xml
<CustomField>
    <fullName>TOT__c</fullName>
    <label>TOT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>