force-app/main/default/objects/Billing_Information_Line_Item__c/fields/Total_Billable__c.field-meta.xml
<CustomField>
    <fullName>Total_Billable__c</fullName>
    <label>Total Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>