force-app/main/default/objects/Billing_Information_Line_Item__c/fields/Total_Billing_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_Billing_Amount_USD__c</fullName>
    <label>Total Billing Amount(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>