force-app/main/default/objects/Billing_Information_Line_Item__c/fields/Total_Hours_Spent_On_Visit__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Spent_On_Visit__c</fullName>
    <label>Total Hours Spent On Visit</label>
    <type>Time</type>
</CustomField>