force-app/main/default/objects/Billing_Information_Line_Item__c/fields/Total_Number_of_Working_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Working_Days__c</fullName>
    <label>Total Number of Working Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>