force-app/main/default/objects/Billing_Information_Line_Item__c/fields/Weekend_Public_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Weekend_Public_Holiday__c</fullName>
    <label>Weekend &amp; Public Holiday</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>